--- a/Audit_Report.ipynb
+++ b/Audit_Report.ipynb
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "id": "cc9d3c37-10c6-41cd-8491-61ce10b2de1c",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>PART_PARTY</td>\n",
-       "      <td>DQM_VALID_SCORE</td>\n",
+       "      <td>PARTY_RC_STD</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1034,7 +1034,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>PART_PARTY</td>\n",
-       "      <td>DQM_VALID_CODE</td>\n",
+       "      <td>PARTY_FNAME_STD</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1044,7 +1044,7 @@
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>PART_PARTY</td>\n",
-       "      <td>DQM_ERR</td>\n",
+       "      <td>PARTY_MNAME_STD</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1054,7 +1054,7 @@
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>PART_PARTY</td>\n",
-       "      <td>PARTY_RC_STD</td>\n",
+       "      <td>PARTY_LNAME_STD</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1064,36 +1064,6 @@
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>PART_PARTY</td>\n",
-       "      <td>PARTY_FNAME_STD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>PART_PARTY</td>\n",
-       "      <td>PARTY_MNAME_STD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>PART_PARTY</td>\n",
-       "      <td>PARTY_LNAME_STD</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>PART_PARTY</td>\n",
        "      <td>PARTY_TITBEF_STD</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1102,7 +1072,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>23</th>\n",
        "      <td>PART_PARTY</td>\n",
        "      <td>PARTY_TITAFT_STD</td>\n",
        "      <td>NaN</td>\n",
@@ -1128,7 +1098,7 @@
     "CHAR_COM as Uplnost, \n",
     "CHAR_INT_CON as InterniKonzistentnost,  \n",
     "CHAR_EXT_CON as ExterniKonzistentnost \n",
-    "From DQM_MDR WHERE TABLE_NAME = \"PART_PARTY\";"
+    "From DQM_MDR WHERE TABLE_NAME = \"PART_PARTY\" and COLUMN_NAME not like '%%DQM_%%';"
    ]
   },
   {
